feat(core,user-app): production-hardening, 4 canonical instruments, real system diagnostics, bulk AI intelligence and UX modernization